# Group-Project

./: Compsci Program Documentation.docx  Date.cpp  Date.h  Email.cpp  Email.h  MailingAddress.cpp  MailingAddress.h  PhoneNumber.cpp  PhoneNumber.h  README.md  Semester.cpp  Semester.h  Student.cpp  Student.h  main.cpp
HugeProject/: Advisor.cpp  Advisor.h  AdvisorList.cpp  AdvisorList.h  CMakeLists.txt  Course.cpp  Course.h  CourseList.cpp  CourseList.h  Date.h  Email.cpp  Email.h  MailingAddress.cpp  MailingAddress.h  OfficeHours.cpp  OfficeHours.h  PhoneNumber.cpp  PhoneNumber.h  Semester.cpp  Semester.h  Student.cpp  Student.h  StudentList.cpp  StudentList.h  main.cpp
RunnableProject/: CMakeLists.txt  MailingAddress.cpp  MailingAddress.h  Student.cpp  Student.h  main.cpp
